--- a/FINA.ipynb
+++ b/FINA.ipynb
@@ -15,12 +15,12 @@
     "Several coaches, competitors, and fans claimed the temporary pool used for the 2013 FINA World Championships had a \"current\" that gave competitors in certain lanes an advantage. We will be examining data from the semifinals and finals of 2013 and 2015 World championships for all four strokes (back, breast, butterfly, and free) to look for lane bias.\n",
     "\n",
     "Is there a change in times as swimmers change from low number lanes (1-3) to high number lanes (6-8) in the semis and finals?\n",
-    "\n",
-    "A good metric for measuring an individual swimmer's improvements from in each round would be The fractional improvement of swim time: (t$_{a}$ - t$_{b}$) / t$_{a}$ \n",
     "![pool](currents.jpg)\n",
+    "A good metric for measuring an individual swimmer's improvements from in each round would be The fractional improvement of swim time: (t<sub>a</sub> - t<sub>b</sub>) / t<sub>a</sub> \n",
     "\n",
     "\n",
-    "*t$_{a}$ - swim time in a lower numbered lane and t$_{b}$ - swim time in a higher lane.\n",
+    "\n",
+    "*t<sub>a</sub> - swim time in a lower numbered lane and t<sub>b</sub> - swim time in a higher lane.\n",
     "\n",
     "*Image courtesy of the Chicago Tribune"
    ]
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -662,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
